feat: Add obuchmann/odoo-jsonrpc package for odoo integration
Signed-off-by: Zhafron Kautsar <zhafronadani@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,14 @@ DB_DATABASE=hashmicropos
 DB_USERNAME=hashmicropos
 DB_PASSWORD=hashmicropos
 
+ODOO_HOST=
+ODOO_DATABASE=
+ODOO_USERNAME=
+ODOO_PASSWORD=
+ODOO_LANG=
+ODOO_TIMEZONE=
+ODOO_COMPANY_ID=
+
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
